--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>iooo-spring-quickstart-archetype</name>
+  <name>iooo-spring-quickstart</name>
   <url>https://www.iooo.tech</url>
 
   <profiles>
